# qiffusion

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.omo/drafts/: diffusion-capability-plan-set.md  diffusion-chat-capability.md  diffusion-code-capability.md  diffusion-final-release-gate.md  diffusion-llm-self-training.md  diffusion-scale-ladder.md  qwen-diffusion-full-training-plan.md  qwen-diffusion-training-loop-plan-set.md
.omo/plans/: diffusion-capability-plan-set.md  diffusion-chat-capability.md  diffusion-code-capability.md  diffusion-final-release-gate.md  diffusion-llm-self-training.md  diffusion-scale-ladder.md  qwen-diffusion-full-training-plan.md  qwen-diffusion-training-loop-plan-set.md
docs/: ROADMAP.md  diffusion-training.md  qwen-diffusion-coding-model-ultraresearch.md
src/qiffusion/: backends.py  cli.py  config.py  decision.py  diffusion_config.py  diffusion_corpus_manifest.py  (+28 more)
tests/: test_cli_e2e.py  test_cli_tracks.py  test_decision.py  test_diffusion_cli.py  test_diffusion_corpus_manifest.py  test_diffusion_data.py  test_diffusion_eval.py  test_diffusion_model.py  test_diffusion_objective.py  test_diffusion_sample.py  test_diffusion_teacher_data.py  test_diffusion_train.py  test_qwen_diffusion_chat_agent.py  test_qwen_diffusion_config.py  test_qwen_diffusion_data_loop.py  test_qwen_diffusion_eval.py  test_qwen_diffusion_loop.py  test_qwen_diffusion_model.py  test_qwen_diffusion_plan_audit.py  test_qwen_diffusion_release_gate.py  test_qwen_diffusion_sample.py  test_qwen_diffusion_train.py  test_qwen_eval.py  test_qwen_tokenizer.py
(+13 files in other folders)
