[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "qiffusion"
version = "0.1.0"
description = "Two-track diffusion LLM and Qwen bridge workspace."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
qiffusion = "qiffusion.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

